--- a/app/.env
+++ b/app/.env
@@ -2,3 +2,4 @@ BOOTSTRAP_SERVERS="localhost:9092, localhost:9093, localhost:9094"
 
 
 DB_URL=mongodb://172.21.38.244:27017
+MESSAGES_ALL_TOPIC=messages.all
