--- a/app/.env
+++ b/app/.env
@@ -1,5 +1,10 @@
 BOOTSTRAP_SERVERS="localhost:9092, localhost:9093, localhost:9094"
 
 
-DB_URL=mongodb://172.21.38.244:27017
+MONGO_DB_URL=mongodb://172.21.38.244:27017
+PSQL_DB_URL=postgresql://admin:1234@172.21.38.244:5432/exam_10_db
+
+
 ALL_MESSAGES_TOPIC=messages.all
+EXPLOSIVE_MESSAGES_TOPIC=messages.explosive
+HOSTAGE_MESSAGES_TOPIC=messages.hostage
